# gst-shrtsp

./: README  configure.ac
